data/apps/argocd/minikube/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  parentRefs:
    - name: traefik-gateway
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: traefik
  hostnames:
    - "dashboard.xxx.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kubernetes-dashboard-ui
          group: ""
          type: Service
          port: 443
          weight: 1
